// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when has changed 1`] = `
<div
  className="components-monitor-venue-monitor-grid-row-m__container"
>
  <div
    className="components-monitor-venue-monitor-grid-row-m__content"
  >
    <h2
      className="components-monitor-venue-monitor-grid-row-m__title"
    >
      <a
        href="http://some/venue/homepage/url"
        rel="noopener"
        target="_blank"
      >
        Venue Openings
      </a>
    </h2>
    <div>
      <span
        className="components-monitor-venue-monitor-grid-row-m__tag-changed components-monitor-venue-monitor-grid-row-m__tag"
      >
        changed
      </span>
    </div>
  </div>
  <FaPencil
    className="components-monitor-venue-monitor-grid-row-m__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when has no url 1`] = `
<div
  className="components-monitor-venue-monitor-grid-row-m__container"
>
  <div
    className="components-monitor-venue-monitor-grid-row-m__content"
  >
    <h2
      className="components-monitor-venue-monitor-grid-row-m__title"
    >
      <span>
        Venue Openings
      </span>
    </h2>
    <div />
  </div>
  <FaPencil
    className="components-monitor-venue-monitor-grid-row-m__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when has not changed 1`] = `
<div
  className="components-monitor-venue-monitor-grid-row-m__container"
>
  <div
    className="components-monitor-venue-monitor-grid-row-m__content"
  >
    <h2
      className="components-monitor-venue-monitor-grid-row-m__title"
    >
      <a
        href="http://some/venue/homepage/url"
        rel="noopener"
        target="_blank"
      >
        Venue Openings
      </a>
    </h2>
    <div />
  </div>
  <FaPencil
    className="components-monitor-venue-monitor-grid-row-m__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when is ignored 1`] = `
<div
  className="components-monitor-venue-monitor-grid-row-m__container"
>
  <div
    className="components-monitor-venue-monitor-grid-row-m__content"
  >
    <h2
      className="components-monitor-venue-monitor-grid-row-m__title"
    >
      <a
        href="http://some/venue/homepage/url"
        rel="noopener"
        target="_blank"
      >
        Venue Openings
      </a>
    </h2>
    <div>
      <span
        className="components-monitor-venue-monitor-grid-row-m__tag"
      >
        ignored
      </span>
    </div>
  </div>
  <FaPencil
    className="components-monitor-venue-monitor-grid-row-m__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;
